--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,7 +19,7 @@ jobs:
         go-version: 1.16
 
     - name: Build
-      run: go build -v cmd/...
+      run: go build -v ./cmd/...
 
     - name: Test
       run: go test -v ./...
