integration test on CI

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,3 +23,6 @@ jobs:
 
     - name: Test
       run: go test -v ./...
+
+    - name: Integration Test
+      run: docker-compose up --exit-code-from test
